--- a/moc-website/package.json
+++ b/moc-website/package.json
@@ -14,6 +14,7 @@
     "serve": "^11.3.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-jwt-decode": "^0.1.0",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11"
