--- a/moc-website/package.json
+++ b/moc-website/package.json
@@ -35,5 +35,7 @@
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
-  }
+  },
+  "types": "./types/common/index.d.ts"
+
 }
