--- a/moc-website/tsconfig.json
+++ b/moc-website/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "typeRoots": [
       "./node_modules/@types",
-      "./node_modules/vuetify/types"
+      "./node_modules/vuetify/types",
+      "./src/types"
     ],
     "target": "es5",
     "module": "esnext",
